--- a/styles/style.css
+++ b/styles/style.css
@@ -10,18 +10,18 @@ body {
 }
 
 h1 {
-    font-size: 48pt;
-    margin: 0;
+    font-size: 48px;
+    margin: 0 0 64px 0;
 }
 
 h2 {
-    font-size: 36pt;
-    margin: 0 0 50px 0;
+    font-size: 40px;
+    margin: 0 0 48px 0;
 }
 
 h3 {
-    font-size: 16pt;
-    margin: 0 0 50px 0;
+    font-size: 16px;
+    margin: 0 0 64px 0;
 }
 
 h1, h2, h3, a {
@@ -50,7 +50,6 @@ h4 {
 }
 
 .big-text {
-    margin-bottom: 50px;
     white-space: nowrap;
 }
 
@@ -61,27 +60,34 @@ h4 {
 
 .btn-container {
     display: inline-block;
-    padding-bottom: 15px;
-    padding-right: 30px;
-    background: #ffffff url("../images/button_1.png") left / 100% auto  no-repeat;
+    position: relative;
+    text-align: center;
+}
+
+.btn-container img {
+    position: absolute;
+    top: 3px;
+    left: 5px;
+    width: 168px;
+    height: 39px;
+    opacity: 0.77;
+    z-index: 1;
 }
 
 a {
-    position: relative;
-    font-size: 14pt;
+    position: absolute;
+    left: 0;
+    font-size: 14px;
     background: none;
-    border: none;
-    padding: 8px 40px;
+    width: 100%;
     text-align: center;
-    display: inline-block;
     text-decoration: none;
+    z-index: 2;
 }
 
 a:before, a:after {
-    --btn-border-height: 35%;
     position: absolute;
     left: 0;
-    height: var(--btn-border-height);
     width: 100%;
     border: solid 2px;
     content: "";
@@ -93,7 +99,7 @@ a:before {
 }
 
 a:after {
-    top: calc(100% - var(--btn-border-height));
+    bottom: 0;
     border-top: none;
 }
 
@@ -160,28 +166,45 @@ a:after {
 }
 
 .icon-container img {
-    padding-right: 15px;
+    padding-right: 24px;
 }
 
 @media screen and (max-width: 623px) {
+    .btn-container {
+        width: 144px;
+        height: 35px;
+    }
+
+    a {
+        line-height: 35px;
+    }
+
+    a:before, a:after {
+        height: 14px;
+    }
+
     h1 {
-        font-size: 24pt;
+        font-size: 32px;
+        margin-bottom: 48px;
     }
 
     h2 {
-        font-size: 18pt;
+        font-size: 26px;
+        margin-bottom: 32px;
     }
 
     h3 {
-        font-size: 10pt;
+        font-size: 14px;
+        margin-bottom: 48px;
+    }
+
+    .first-block, .second-block {
+        padding: 48px 36px 64px 37px;
     }
 
     .first-block {
         height: auto;
-    }
-
-    .first-block, .second-block {
-        padding: 50px 30px;
+        padding-bottom: 82px;
     }
 
     .first-block-text {
@@ -198,8 +221,25 @@ a:after {
 }
 
 @media (min-width: 624px) and (max-width: 911px) {
+    .btn-container {
+        width: 144px;
+        height: 31px;
+    }
+
+    a {
+        line-height: 31px;
+    }
+
+    a:before, a:after {
+        height: 12px;
+    }
+
     .first-block, .second-block {
-        padding-left: 70px;
+        padding: 80px 96px 112px 96px;
+    }
+
+    .first-block {
+        padding-bottom: 127px;
     }
 
     .first-block-text {
@@ -216,16 +256,29 @@ a:after {
 }
 
 @media (min-width: 912px) and (max-width: 1199px) {
-    .first-block {
-        padding-left: 50px;
+    .btn-container {
+        width: 144px;
+        height: 29px;
     }
 
-    .left-content {
-        left: 8%;
+    a {
+        line-height: 29px;
     }
+
+    a:before, a:after {
+        height: 11px;
+    }
+
+    .first-block {
+        padding: 0 0 244px 80px;
+    }
+
+    /*.left-content {*/
+        /*left: 8%;*/
+    /*}*/
 
     .second-block {
-        padding-left: calc(50px + 8%);
+        padding: 80px 80px 0 80px;
     }
 
     .first-block-text {
@@ -244,23 +297,48 @@ a:after {
 
 @media screen and (min-width: 1200px) {
     h1 {
-        font-size: 60pt;
+        font-size: 72px;
+        margin-bottom: 64px;
     }
 
     h2 {
-        font-size: 48pt;
+        font-size: 56px;
+        margin-bottom: 58px;
+    }
+
+    h3 {
+        font-size: 18px;
+        margin-bottom: 64px;
+    }
+
+    .btn-container {
+        width: 192px;
+        height: 42px;
+    }
+
+    a {
+        line-height: 42px;
+    }
+
+    a:before, a:after {
+        height: 15px;
+    }
+
+    .btn-container img {
+        width: 216px;
+        height: 47px;
     }
 
     .first-block {
-        padding-left: 13%;
+        padding: 216px 0 228px 384px;
     }
 
-    .left-content {
-        left: 8%;
-    }
+    /*.left-content {*/
+        /*left: 8%;*/
+    /*}*/
 
     .second-block {
-        padding-left: 21%;
+        padding: 80px 384px 122px 384px;
     }
 
     .first-block-text {
